Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             >
               <div class="w-5/12 text-right">
                 <div class="bg-gray-800 p-4 rounded-lg glow-effect">
-                  <h4 class="font-semibold">Banjar 1 Senior High School</h4>
+                  <h4 class="font-semibold">Banjar 1 Vocational High School</h4>
                   <p class="text-gray-400">2024 - Not finished yet</p>
                 </div>
               </div>
@@ -704,3 +704,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
